SNES is too slow https://bugs.webkit.org/show_bug.cgi?id=29534

Reviewed by Maciej Stachowiak.

The problem was that the emulator used multiple classes with
more properties than our dictionary cutoff allowed, this resulted
in more or less all critical logic inside the emulator requiring
uncached property access.

Rather than simply bumping the dictionary cutoff, this patch
recognises that there are two ways to create a "dictionary"
structure.  Either by adding a large number of properties, or
by removing a property.  In the case of adding properties we
know all the existing properties will maintain their existing
offsets, so we could cache access to those properties, if we
know they won't be removed.

To make this possible, this patch adds the logic required to
distinguish a dictionary created by addition from one created
by removal.  With this logic in place we can now cache access
to objects with large numbers of properties.

SNES performance improved by more than 6x.

Canonical link: https://commits.webkit.org/40137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48573 268f45cc-cd09-0410-ab3c-d52691b4dbfc